--- a/pages/entry/entry.wxml
+++ b/pages/entry/entry.wxml
@@ -12,90 +12,98 @@
     <view class="subInfo_1">
       <van-cell-group class="secton_1">
         <van-field
-          value="{{ deptName }}"
+          value="{{ show?'':deptName }}"
           type="text"
           required
           clearable
           label="单位和部门名称"
-          title-width="200rpx"
+          title-width="220rpx"
           bind:change="deptNameInput"
+          label-class="label-class"
         />
         <van-field
-          value="{{ projName }}"
+          value="{{ show?'':projName }}"
           type="text"
           required
           clearable
           label="服务项目名称"
-          title-width="200rpx"
+          title-width="220rpx"
           bind:change="projNameInput"
+          label-class="label-class"
         />
         <van-cell-group>
           <van-row>
             <van-col span="10">
               <van-field
-                value="{{ contact }}"
+                value="{{ show?'':contact }}"
                 type="text"
                 required
                 clearable
                 label="联系人"
-                title-width="90rpx"
+                title-width="100rpx"
                 bind:change="contactInput"
+                label-class="label-class"
               />
             </van-col>
             <van-col span="13">
               <van-field
-                value="{{ tel }}"
+                value="{{ show?'':tel }}"
                 type="tel"
                 required
                 clearable
                 label="电话"
                 title-width="70rpx"
                 bind:change="telInput"
+                label-class="label-class"
               />
             </van-col>
           </van-row>
         </van-cell-group>
         <van-field
-          value="{{ email }}"
+          value="{{ show?'':email }}"
           type="text"
           required
           clearable
           label="邮箱"
-          title-width="100rpx"
+          title-width="120rpx"
           bind:change="emailInput"
+          label-class="label-class"
         />
         <van-field
-          value="{{ staff }}"
+          value="{{ show?'':staff }}"
           type="textarea"
           required
           clearable
           label="进场人员"
           title-width="120rpx"
           bind:change="staffInput"
+          label-class="label-class"
           autosize
         />
         <van-field
-          value="{{ description }}"
+          value="{{ show?'':description }}"
           type="textarea"
           required
           clearable
           label="工作说明"
           title-width="120rpx"
           bind:change="descriptionInput"
+          label-class="label-class"
           autosize
         />
         <van-field
-          value="{{ requirement }}"
+          value="{{ show?'':requirement }}"
           type="textarea"
           required
           clearable
           label="资源需求"
           title-width="120rpx"
           bind:change="requirementInput"
+          label-class="label-class"
           autosize
         />
-        <van-cell title="进场时间" value="{{ date }}" bind:click="onDisplay" required title-class="cell-title" />
-        <van-calendar show="{{ show }}" bind:close="onClose" bind:confirm="onConfirm" />
+        <van-cell title="进场时间" value="{{ date }}" bind:click="onDisplay" required title-class="cell-title" label-class="label-class" />
+        <van-calendar show="{{ show }}" bind:close="onClose" bind:confirm="onConfirm" safe-area-inset-bottom="{{ false }}" poppable="{{ true }}" />
       </van-cell-group>
     </view>
   </view>
